General adjustments the text colors

--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -72,7 +72,7 @@
 
     <Color x:Key="BlackColor">#FF000000</Color>
     <Color x:Key="WhiteColor">#FFFFFFFF</Color>
-    <Color x:Key="TextColor">#f1f7ff</Color>
+    <Color x:Key="TextColor">#dfe3e6</Color>
     <Color x:Key="TextColorDarker">#a3a3a3</Color>
     <Color x:Key="TextColorDark">#FF000000</Color>
     <Color x:Key="MainColor">#2C3A67</Color>
