--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -446,9 +446,10 @@
                                             <StackPanel Margin="0,0,0,25">
                                                 <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
                                                 <TextBox Name="PART_TextNotes" IsReadOnly="True"
-                                                     BorderThickness="0"
-                                                     AcceptsReturn="True" TextWrapping="Wrap"
-                                                     Margin="-1,0,-1,0" Padding="0"/>
+                                                         Background="Transparent"
+                                                         BorderThickness="0"
+                                                         AcceptsReturn="True" TextWrapping="Wrap"
+                                                         Margin="-1,0,-1,0" Padding="0"/>
                                             </StackPanel>
                                         </Expander>
 
