GridView: Fix Cover controls not displaying on hover on certain circumstances

--- a/source/DerivedStyles/GridViewItemTemplate.xaml
+++ b/source/DerivedStyles/GridViewItemTemplate.xaml
@@ -12,7 +12,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type GameListItem}">
                     <Grid>
-                        <Border BorderThickness="{Settings GridItemMargin}" BorderBrush="{DynamicResource GridItemBackgroundBrush}">
+                        <Border BorderThickness="{Settings GridItemMargin}" BorderBrush="{DynamicResource GridItemBackgroundBrush}"
+                                Background="Transparent">
                             <StackPanel Name="PART_PanelHost"
                                         d:DataContext="{x:Static DesignMainViewModel.DesignSelectedGameIntance}">
                                 <Grid>
