--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -425,7 +425,7 @@
                                                                    StretchDirection="Both" Stretch="Uniform"
                                                                    RenderOptions.BitmapScalingMode="Fant" Margin="0,0,15,0">
                                                                 <Image.Effect>
-                                                                    <DropShadowEffect BlurRadius="15" ShadowDepth="0"/>
+                                                                    <DropShadowEffect RenderingBias="Performance" BlurRadius="15" ShadowDepth="0"/>
                                                                 </Image.Effect>
                                                             </Image>
                                                         </Border>
