--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -119,6 +119,13 @@
                                     </Border>
 
                                 </DockPanel>
+
+                                <ContentControl DockPanel.Dock="Top" x:Name="DuplicateHider_SourceSelector" 
+                                        HorizontalAlignment="Right"
+                                        VerticalContentAlignment="Center"   
+                                        Margin="0,0,0,0"  
+                                        Height="24"
+                                        RenderOptions.BitmapScalingMode="Fant" />
                                 
                                 <DockPanel DockPanel.Dock="Top" Margin="0,10,0,10">
                                     <Button Name="PART_ButtonPlayAction" Style="{DynamicResource PlayButton}" />
