GridView: Improved visibility of favorite icon on game covers

--- a/source/DerivedStyles/GridViewItemTemplate.xaml
+++ b/source/DerivedStyles/GridViewItemTemplate.xaml
@@ -86,7 +86,7 @@
                                 </Grid>
 
                                 <TextBlock Grid.Row="1" Text="&#xF000;" Foreground="#67b3ff"
-                                                    Opacity="0.75" FontSize="16"
+                                                    Opacity="0.90" FontSize="16" ClipToBounds="True"
                                                     Margin="8,5,5,5"
                                                     VerticalAlignment="Top"
                                                     HorizontalAlignment="Right"
@@ -102,6 +102,12 @@
                                                         <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag}" Value="True" />
                                                     </MultiDataTrigger.Conditions>
                                                     <Setter Property="Visibility" Value="Visible" />
+                                                    <Setter Property="Effect">
+                                                        <Setter.Value>
+                                                            <DropShadowEffect RenderingBias="Performance"
+                                                                              BlurRadius="6" ShadowDepth="0" Color="#000000" />
+                                                        </Setter.Value>
+                                                    </Setter>
                                                 </MultiDataTrigger>
                                             </Style.Triggers>
                                         </Style>
