--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -610,19 +610,37 @@
                                             </Grid.ColumnDefinitions>
 
                                             <StackPanel Grid.Column="0" Margin="0,0,0,0">
-                                                <StackPanel Name="PART_ElemNotes" Margin="0,0,0,10">
+                                                <StackPanel Margin="0,0,0,10">
+                                                    <StackPanel.Style>
+                                                        <Style TargetType="StackPanel">
+                                                            <Setter Property="Visibility" Value="Collapsed" />
+                                                            <Style.Triggers>
+                                                                <DataTrigger Binding="{Binding ElementName=PART_TextNotes, Path=Visibility}" Value="Visible">
+                                                                    <Setter Property="Visibility" Value="Visible" />
+                                                                </DataTrigger>
+                                                                <DataTrigger Binding="{PluginSettings Plugin=PlayNotes, Path=IsControlVisible, FallbackValue=False}" Value="True">
+                                                                    <Setter Property="Visibility" Value="Visible" />
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </StackPanel.Style>
+                                                    
                                                     <Label Content="{DynamicResource LOCNotesLabel}" Style="{DynamicResource FeedSectionLabel}"/>
                                                     <Grid Margin="0,0,0,10" MinHeight="45">
                                                         <Border Style="{DynamicResource OutlineBorderSidePanelsBorder}" />
-                                                        <Border Style="{DynamicResource OutlineBorder}"></Border>
-                                                        <Border Padding="10">
+                                                        <Border Style="{DynamicResource OutlineBorder}" />
+                                                        <StackPanel Margin="10">
                                                             <TextBox Name="PART_TextNotes" IsReadOnly="True"
                                                                  BorderThickness="0" Background="Transparent"
                                                                  AcceptsReturn="True" TextWrapping="Wrap"
                                                                  VerticalScrollBarVisibility="Auto"
                                                                  MaxHeight="300"
                                                                  Margin="20,0,20,0" VerticalAlignment="Center"/>
-                                                        </Border>
+
+                                                            <ContentControl x:Name="PlayNotes_NotesViewerControl"
+                                                                    Visibility="{PluginSettings Plugin=PlayNotes, Path=IsControlVisible, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Collapsed}"
+                                                                    Margin="0,10,0,0" />
+                                                        </StackPanel>
                                                     </Grid>
                                                 </StackPanel>
 
